# SummerPractice

./: CMakeLists.txt  main.c  makefile  out.txt  scanner.c  scanner.h  serv.txt  thread_pool.c  thread_pool.h  util_scanner  utils.c  utils.h  visiting_servers.c  visiting_servers.h  wrapper.c  wrapper.h
files/: out.txt  serv.txt
include/: scanner.h  thread_pool.h  utils.h  visiting_servers.h
src/: main.c  scanner.c  thread_pool.c  visiting_servers.c
